[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/UI/Backdrop.png" type="Texture" id=1]
[ext_resource path="res://Prefabs/Buttons/CustomButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Prefabs/Buttons/Audiobutton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/UI/baseline_menu_black_36dp.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/baseline_house_black_36dp.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/baseline_close_black_36dp.png" type="Texture" id=6]
[ext_resource path="res://Prefabs/scripts/OverlayMenu.gd" type="Script" id=7]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MenuBox" type="NinePatchRect" parent="."]
visible = false
self_modulate = Color( 0.423529, 0.278431, 0.521569, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.0
margin_top = -111.0
margin_right = 78.0
margin_bottom = 111.0
texture = ExtResource( 1 )
patch_margin_left = 8
patch_margin_top = 25
patch_margin_right = 8
patch_margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MenuBox"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -32.0
margin_top = 8.0
margin_right = 32.0
margin_bottom = -8.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioButton" parent="MenuBox/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
stretch_mode = 5

[node name="MainMenuButton" parent="MenuBox/VBoxContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 72.0
margin_right = 64.0
margin_bottom = 136.0
rect_min_size = Vector2( 64, 64 )

[node name="TextureRect" type="TextureRect" parent="MenuBox/VBoxContainer/MainMenuButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
texture = ExtResource( 5 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseMenuButton" parent="MenuBox/VBoxContainer" instance=ExtResource( 2 )]
modulate = Color( 1, 0.207843, 0.207843, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 144.0
margin_right = 64.0
margin_bottom = 208.0
rect_min_size = Vector2( 64, 64 )

[node name="TextureRect" type="TextureRect" parent="MenuBox/VBoxContainer/CloseMenuButton"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="ColorRect" parent="."]
margin_left = 292.5
margin_right = 292.5
margin_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" parent="." instance=ExtResource( 2 )]
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -42.5
margin_top = 5.5
margin_right = -8.5
margin_bottom = 39.5
rect_min_size = Vector2( 32, 32 )
toggle_mode = true

[node name="TextureRect" type="TextureRect" parent="MenuButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MenuBox/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="MenuBox/VBoxContainer/CloseMenuButton" to="." method="_on_CloseMenuButton_pressed"]
[connection signal="toggled" from="MenuButton" to="." method="_on_MenuButton_toggled"]
