[gd_scene load_steps=8 format=2]

[ext_resource path="res://Prefabs/scripts/OverlayMenu.gd" type="Script" id=1]
[ext_resource path="res://Prefabs/Buttons/HomeButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Prefabs/Buttons/Audiobutton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Prefabs/Buttons/ResetButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Prefabs/Buttons/MenuButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Prefabs/Buttons/CloseButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/UI/Backdrop.png" type="Texture" id=7]

[node name="OverlayMenu" type="ViewportContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="MenuBox" type="NinePatchRect" parent="."]
visible = false
self_modulate = Color( 0.423529, 0.278431, 0.521569, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.0
margin_top = -111.0
margin_right = 78.0
margin_bottom = 111.0
texture = ExtResource( 7 )
patch_margin_left = 8
patch_margin_top = 25
patch_margin_right = 8
patch_margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MenuBox"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -32.0
margin_top = 8.0
margin_right = 32.0
margin_bottom = -8.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioButton" parent="MenuBox/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
stretch_mode = 5

[node name="HomeButton" parent="MenuBox/VBoxContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 72.0
margin_right = 64.0
margin_bottom = 136.0
rect_min_size = Vector2( 64, 64 )

[node name="CloseButton" parent="MenuBox/VBoxContainer" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 144.0
margin_right = 64.0
margin_bottom = 208.0
rect_min_size = Vector2( 64, 64 )

[node name="Menu" type="ColorRect" parent="."]
margin_left = 292.5
margin_right = 292.5
margin_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -88.0
margin_right = -20.0
margin_bottom = 32.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetButton" parent="HBoxContainer" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 32.0
margin_bottom = 32.0

[node name="MenuButton" parent="HBoxContainer" instance=ExtResource( 5 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 36.0
margin_top = 0.0
margin_right = 68.0
margin_bottom = 32.0
[connection signal="pressed" from="MenuBox/VBoxContainer/HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="pressed" from="MenuBox/VBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="HBoxContainer/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="toggled" from="HBoxContainer/MenuButton" to="." method="_on_MenuButton_toggled"]
